--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+  android.applicationVariants.all { variant ->
+        variant.outputs.all { output ->
+
+            def fileName = output.outputFileName.replace(".apk", "_" + variant.versionCode + "_" + variant.versionName + ".apk")
+            outputFileName = new File(fileName)
+        }
+    }
 }
 
 dependencies {
